Fixed CF7 icons, margin spacing, added overflow hidden on journey post to avoid offset

--- a/themes/willeytheme/assets/styles/layouts/_contact_page.scss
+++ b/themes/willeytheme/assets/styles/layouts/_contact_page.scss
@@ -40,15 +40,16 @@
 .contact_icons {
 	max-width: 20px;
 	float: left;
+	margin-top: 10px;
 }
 
 .contact_details a img {
 	margin-top: 5px;
 }
 
-.email {
+.contact_email {
 	margin-left: 5px;
-	font-size: 12px;
+	font-size: 18px;
 }
 
 // mobile form
